--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ worker_processes auto;
 events {}
 stream {
     upstream backend {
-        server teliman.duckdns.org:80;
+        server ib.maxfree.win:80;
     }
     server {
         listen 8080;
